--- a/Cpp_3dAiSystem.uproject
+++ b/Cpp_3dAiSystem.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Cpp_3dAiSystem",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
